--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
+    "antd": "^3.26.20",
     "axios": "^1.9.0",
     "fetch": "^1.1.0",
     "react": "^19.1.0",
